fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
 }
 
 .app {
-  padding: 20px;
+  /* padding: 20px; */
 }
 
 .app-header {
@@ -31,7 +31,13 @@ body {
   margin-left: 20px;
 }
 
+.container {
+  position: absolute;
+  width: 100%;
+}
+
 .webcam {
+  /* position: absolute; */
   margin-left: "auto";
   margin-right: "auto";
   /* border-radius: 30px; */
@@ -47,7 +53,7 @@ body {
   position: absolute;
   margin-left: "auto";
   margin-right: "auto";
-  font-family: "Times New Roman", Times, serif;
+  top: 0;
   left: 0;
   right: 0;
   text-align: "center";
